<resources>
    <string name="app_name">GeoAD</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_nav_home">Map</string>
    <string name="start_screen_text">Are you a ..?</string>
    <string name="patient_button_text">Patient</string>
    <string name="caretaker_button_text">Caretaker</string>
    <string name="caretaker_new_registration_text">New to GeoAD? Register here!</string>
    <string name="caretaker_new_login_text">Already registered? Login here!</string>
    <string name="caretaker_registration_text">Caretaker Registration</string>
    <string name="caretaker_login_text">Caretaker Login</string>
    <string name="full_name_text">Full Name</string>
    <string name="date_of_birth_text">Date of Birth</string>
    <string name="phone_text">Phone</string>
    <string name="caretaker_id_text">Caretaker ID</string>
    <string name="password_text">Password</string>
    <string name="register_text">Register</string>
    <string name="login_text">Login</string>
    <string name="full_name_text_box_hint">Your Full Name</string>
    <string name="date_of_birth_text_box_hint">Your Date of Birth</string>
    <string name="phone_text_box_hint">Your Phone</string>
    <string name="password_text_box_hint">Your Password</string>
    <string name="hello_blank_fragment">hello</string>
    <string name="patient_id_text">Patient ID</string>
    <string name="patient_login_text">Patient Login</string>
    <string name="patient_id_text_hint">Enter Patient ID</string>
    <string name="caretaker_id_text_hint">Your Caretaker ID</string>
    <string name="patient_register_text">Create New Account</string>
    <string name="patient_phone_text">Phone Number</string>
    <string name="patient_phone_text_hint">Enter Your Phone Number</string>
    <string name="new_password_text_box_hint">Enter Your Password</string>
    <string name="patient_existing_account_text">Already registered? Login Here!</string>
    <string name="patient_new_registration_text">New to GeoAD? Register Here!</string>
    <string name="new_account_text">Success!</string>
    <string name="continue_text">Press the button below to being using GeoAD</string>
    <string name="begin_text">Begin</string>
    <string name="request_text">Requests Page</string>
    <string name="map_text">Map</string>
    <string name="call_emergency_services">Call 911</string>
    <string name="call_caretaker">Call Caretaker</string>
    <string name="alternate_text">Or</string>
    <string name="request_new_text">Request New Geofence</string>
    <string name="request_change_text">Request Geofence Change</string>
    <string name="new_name_text_hint">("My House", "The Park", etc.)</string>
    <string name="submit_text">Submit Request</string>
    <string name="new_fence_name_text">Rename Geofence</string>
    <string name="change_type_text">New Geofence Type</string>
    <string name="new_size_text_hint">(In Meters)</string>
    <string name="new_type_text_hint">(Store, Home, Doctor, etc.)</string>
    <string name="new_fence_size_text">New Geofence Size</string>
    <string name="which_fence_text">Which Geofence would you like to change?</string>
    <string name="new_address_text_hint">1234 Name ST. City, Provence, Zip Code</string>
    <string name="change_text">What would you like to change it to?</string>
    <string name="request_edit_type_text">What would you like to change?</string>
    <string name="request_confirm_text">All Done!</string>
    <string name="delivery_text">Your request has been submitted</string>
    <string name="home_text">Home</string>
    <string name="title_activity_maps">Map</string>
    <string name="patient_list_text">Patient List</string>
    <string name="caretaker_id_note_text">Here is your assigned Caretaker ID that will be used for logging in. Make sure to remember it!</string>
    <string name="caretaker_id_placeholder">000000</string>
    <string name="continue_button_text">Continue</string>
    <string name="add_patient_button_text">Add Patient</string>
    <string name="patient_information_button_text">Patient Information</string>
    <string name="check_patient_location_button_text">Check Patient Location</string>
    <string name="manage_geofence_button_text">Manage Geofence</string>
    <string name="remove_patient_button_text">Remove Patient</string>
    <string name="remove_patient_warning_text">Are you sure you want to remove "John Doe" from your patient list?</string>
    <string name="yes_text">Yes</string>
    <string name="no_text">No</string>
    <string name="add_patient_info_text">Please enter the Patient ID of your new patient:</string>
    <string name="add_button_text">Add</string>
    <string name="cancel_button_text">Cancel</string>
    <string name="return_button_text">Return</string>
    <string-array name="geofence_list">
        <item>Select</item>
        <item>Home</item>
        <item>Store</item>
        <item>Park</item>
        <item>Doctor\'s Office</item>
    </string-array>
    <string-array name="change_type">
        <item>Select</item>
        <item>Name</item>
        <item>Size</item>
        <item>Type</item>
        <item>Address</item>
    </string-array>
</resources>