<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/caretakerRegistrationText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100sp"
        android:layout_centerHorizontal="true"
        android:text="@string/caretaker_registration_text"
        android:textSize="30sp"
        android:textStyle="bold"
        />

    <TextView
        android:id="@+id/fullNameText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/caretakerRegistrationText"
        android:layout_marginTop="50sp"
        android:layout_alignStart="@id/fullNameTextBox"
        android:text="@string/full_name_text"
        />

    <EditText
        android:id="@+id/fullNameTextBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/fullNameText"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:inputType="textCapWords"
        android:hint="@string/full_name_text_box_hint"
        />

    <TextView
        android:id="@+id/dateOfBirthText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/fullNameTextBox"
        android:layout_alignStart="@id/dateOfBirthTextBox"
        android:text="@string/date_of_birth_text"
        />

    <EditText
        android:id="@+id/dateOfBirthTextBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/dateOfBirthText"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:inputType="date"
        android:hint="@string/date_of_birth_text_box_hint"
        />

    <TextView
        android:id="@+id/phoneText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/dateOfBirthTextBox"
        android:layout_alignStart="@id/phoneTextBox"
        android:text="@string/phone_text"
        />

    <EditText
        android:id="@+id/phoneTextBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/phoneText"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:inputType="phone"
        android:hint="@string/phone_text_box_hint"
        />

    <TextView
        android:id="@+id/passwordText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/phoneTextBox"
        android:layout_alignStart="@id/passwordTextBox"
        android:text="@string/password_text"
        />

    <EditText
        android:id="@+id/passwordTextBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/passwordText"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/password_text_box_hint"
        />

    <Button
        android:id="@+id/caretakerRegistrationButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/passwordTextBox"
        android:layout_marginTop="40sp"
        android:layout_centerHorizontal="true"
        android:text="@string/register_text"
        />

    <TextView
        android:id="@+id/inkLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/caretakerRegistrationButton"
        android:layout_marginTop="40sp"
        android:layout_centerHorizontal="true"
        android:text="@string/caretaker_new_login_text"
        android:textSize="20sp"
        android:textColor="#3F51B5"
        />
</RelativeLayout>