<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/caretakerLoginText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100sp"
        android:layout_centerHorizontal="true"
        android:text="@string/caretaker_login_text"
        android:textSize="30sp"
        android:textStyle="bold"
        />

    <TextView
        android:id="@+id/caretakerIdText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/caretakerLoginText"
        android:layout_marginTop="50sp"
        android:layout_alignStart="@id/caretakerIdTextBox"
        android:text="@string/caretaker_id_text"
        />

    <EditText
        android:id="@+id/caretakerIdTextBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/caretakerIdText"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:inputType="number"
        android:hint="@string/caretaker_id_text_hint"
        />

    <TextView
        android:id="@+id/passwordText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/caretakerIdTextBox"
        android:layout_alignStart="@id/passwordTextBox"
        android:text="@string/password_text"
        />

    <EditText
        android:id="@+id/passwordTextBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/passwordText"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/password_text_box_hint"
        />

    <Button
        android:id="@+id/caretakerLoginButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/passwordTextBox"
        android:layout_marginTop="40sp"
        android:layout_centerHorizontal="true"
        android:text="@string/login_text"
        />

    <TextView
        android:id="@+id/inkRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/caretakerLoginButton"
        android:layout_marginTop="40sp"
        android:layout_centerHorizontal="true"
        android:text="@string/caretaker_new_registration_text"
        android:textSize="20sp"
        android:textColor="#3F51B5"
        />
</RelativeLayout>