<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/addPatientInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="200sp"
        android:layout_centerHorizontal="true"
        android:text="@string/add_patient_info_text"
        android:textSize="30sp"
        android:textStyle="bold"
        android:gravity="center"
        />

    <TextView
        android:id="@+id/patientIdText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/addPatientInfo"
        android:layout_marginTop="50sp"
        android:layout_alignStart="@id/patientIdTextBox"
        android:text="@string/patient_id_text"
        />

    <EditText
        android:id="@+id/patientIdTextBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/patientIdText"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:inputType="number"
        android:hint="@string/patient_id_text_hint"
        />

    <Button
        android:id="@+id/addButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/patientIdTextBox"
        android:layout_marginTop="20sp"
        android:text="@string/add_button_text"
        />

    <Button
        android:id="@+id/cancelButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/addButton"
        android:layout_marginTop="20sp"
        android:text="@string/cancel_button_text"
        />
</RelativeLayout>