<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/changeRequestTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="75sp"
        android:textStyle="bold"
        android:text="Request New Geofence"
        android:textSize="36sp"/>
    <TextView
        android:id="@+id/fenceNameText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:layout_below="@id/changeRequestTitle"
        android:layout_marginTop="40sp"
        android:text="@string/new_fence_name_text"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/nameTextBox"
        android:layout_width="275sp"
        android:layout_height="60sp"
        android:layout_below="@id/fenceNameText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10sp"
        android:ems="10"
        android:hint="@string/new_name_text_hint"
        android:inputType="textNoSuggestions" />

    <TextView
        android:id="@+id/typeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/nameTextBox"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:layout_marginTop="30sp"
        android:text="@string/change_type_text"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/typeTextBox"
        android:layout_width="275sp"
        android:layout_height="60sp"
        android:layout_below="@id/typeText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10sp"
        android:ems="10"
        android:hint="@string/new_type_text_hint"
        android:inputType="textNoSuggestions" />

    <TextView
        android:id="@+id/fenceSizeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:layout_below="@id/typeTextBox"
        android:layout_marginTop="30sp"
        android:text="@string/new_fence_size_text"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/sizeTextBox"
        android:layout_width="275sp"
        android:layout_height="60sp"
        android:layout_below="@id/fenceSizeText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10sp"
        android:ems="10"
        android:hint="@string/new_size_text_hint"
        android:inputType="number" />

    <Button
        android:id="@+id/submitChangeButton"
        android:layout_width="wrap_content"
        android:layout_height="60sp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40sp"
        android:layout_below="@id/sizeTextBox"
        android:text="@string/submit_text" />

</RelativeLayout>