<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/mapButton"
        android:layout_width="275sp"
        android:layout_height="60sp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="118sp"
        android:text="@string/map_text" />

    <Button
        android:id="@+id/emergencyButton"
        android:layout_width="275sp"
        android:layout_height="60sp"
        android:layout_below="@id/careButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="85sp"
        android:text="@string/call_emergency_services" />

    <Button
        android:id="@+id/careButton"
        android:layout_width="275sp"
        android:layout_height="60sp"
        android:layout_below="@id/mapButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="85sp"
        android:text="@string/call_caretaker" />

    <Button
        android:id="@+id/requestButton"
        android:layout_width="275sp"
        android:layout_height="60sp"
        android:layout_below="@id/emergencyButton"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="85sp"
        android:layout_marginBottom="118sp"
        android:text="@string/request_text" />
</RelativeLayout>