<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/patientInformationButton"
        android:layout_width="275sp"
        android:layout_height="60sp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="150sp"
        android:text="@string/patient_information_button_text"
        />

    <Button
        android:id="@+id/checkPatientLocationButton"
        android:layout_width="275sp"
        android:layout_height="60sp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/patientInformationButton"
        android:layout_marginTop="50sp"
        android:text="@string/check_patient_location_button_text"
        />

    <Button
        android:id="@+id/manageGeofenceButton"
        android:layout_width="275sp"
        android:layout_height="60sp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/checkPatientLocationButton"
        android:layout_marginTop="50sp"
        android:text="@string/manage_geofence_button_text"
        />

    <Button
        android:id="@+id/removePatientButton"
        android:layout_width="275sp"
        android:layout_height="60sp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/manageGeofenceButton"
        android:layout_marginTop="50sp"
        android:text="@string/remove_patient_button_text"
        />

</RelativeLayout>