<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/accountSuccessText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="150sp"
        android:text="@string/new_account_text"
        android:textSize="36sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/caretakerIdNoteText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/accountSuccessText"
        android:layout_marginTop="50sp"
        android:gravity="center"
        android:text="@string/caretaker_id_note_text"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/caretakerId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/caretakerIdNoteText"
        android:layout_marginTop="20sp"
        android:text="@string/caretaker_id_placeholder"
        android:textSize="24sp"
        android:textStyle="bold"
        />

    <Button
        android:id="@+id/continueButton"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/caretakerId"
        android:layout_marginTop="20sp"
        android:text="@string/continue_button_text" />

</RelativeLayout>