<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/startScreenText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_screen_text"
        android:textSize="36sp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="150dp"
        />

    <Button
        android:id="@+id/patientButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/patient_button_text"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/startScreenText"
        android:layout_marginTop="100dp"
        />

    <Button
        android:id="@+id/caretakerButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/caretaker_button_text"
        android:layout_below="@+id/patientButton"
        android:layout_marginTop="50dp"
        />

</RelativeLayout>