<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/removePatientWarning"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="175sp"
        android:gravity="center"
        android:text="@string/remove_patient_warning_text"
        android:textSize="30sp"
        android:textStyle="bold"
        />

    <Button
        android:id="@+id/yesButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/removePatientWarning"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50sp"
        android:text="@string/yes_text"
        />

    <Button
        android:id="@+id/noButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/yesButton"
        android:layout_marginTop="50sp"
        android:layout_centerHorizontal="true"
        android:text="@string/no_text"
        />
</RelativeLayout>