<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/accountSuccessText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100sp"
        android:text="@string/new_account_text"
        android:textSize="36sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/continueText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/accountSuccessText"
        android:layout_marginTop="10sp"
        android:layout_marginLeft="50sp"
        android:gravity="center"
        android:text="@string/continue_text"
        android:textSize="24sp" />

    <Button
        android:id="@+id/accountSuccessButton"
        android:layout_width="150sp"
        android:layout_height="60sp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="@string/begin_text" />

</RelativeLayout>